--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <a href="index.html" class="nav-logo">
-            <img src="./assets/foodie's spotlight.png" alt="simply recipes" />
+            <img src="./assets/foodie's spotlight.png" alt="foodie's spotlight" />
           </a>
           <button class="nav-btn btn">
             <i class="fas fa-align-justify"></i>
